# weather-tui

./: Cargo.toml  README.md  install.sh  update.sh
src/: main.rs
